syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service AdminService{
	rpc GetAdmin(AdminUsername) returns(ResponseGetAdmins);
}

message AdminData {
	string username = 1;
	string password = 2;
	string email = 3;
}

message AdminUsername {
	optional string username = 1;
}

message ResponseGetAdmins {
	repeated AdminData admins = 1;
}
